    - SCM documentation in README.txt

 SportsTracker changes:
  - All dialogs can now be closed by pressing the Escape key
 
 PolarViewer changes:
  - PolarViewer has been renamed to ExerciseViewer, because it supports much more 
    heart rate monitor manufacturers than Polar (was the case at beginning)
    - changed package name de.saring.polarviewer to de.saring.exerciseviewer
    
v4.2.1 (no public release, internal marker only):
 SportsTracker changes:
  - Better Swing Application Framework 1.9 RC4 replaces Swing Application
    Framework 1.03 (the SAF project has no progress)
    - BSAF contains many bugfixes and improvements
    - BSAF Jar is much smaller, swing-worker.jar is not needed aynmore
  - JUnit updated to version 4.8.1
  - MiGLayout updated to version 3.7.3.1 and bugfixes in MigLayout usage
  - Groovy updated to version 1.7.2
  - EasyMock updated to version 2.5.2 (now finally allows Class mocking)
  - downgrade to JDOM 1.1 because 1.1.1 is not available in Maven
    repositories (1.1.1 doesn't have critical bugfixes)
  - Eclipse project configuration updates

v4.2.0:
 SportsTracker changes:
  - Eclipse project update to Eclipse 3.5 and Groovy-Eclipse 2.0.0
     => much better Groovy integration, all parsers and tests are now 
        running within the IDE)
  - Groovy updated to 1.7.0
  - fixed all Eclipse 3.5 compiler warnings
  - Overview Dialog: 
    - Diagram type "last 12 months":
      - display current month and 12 months before (in total 13 months)
        (good for compare current month and the one from year before)
      - show only month names on bottom axis (year not required, space
        is not sufficient)      
    - fixed all deprecated JFreeChart usages (also in PolarViewer) 
  - new tool: sportstracker-importer 0.5 (added to 'misc' directory)
    - done for importing all your Polar HRM files at once
    - created by Jiri Polcar <polcar@physics.muni.cz>
  - MacOS X support improvements and bugfixes, contributed by Mathias Obst