@@ -4,8 +4,8 @@ import de.saring.util.unitcalc.FormatUtils.SpeedView;
 import de.saring.util.unitcalc.FormatUtils.UnitSystem;
 
 /**
- * This interface defines all required options by the PolarViewer application.
- * The implementation must be done by the application which uses PolarViewer. 
+ * This interface defines all required options by the ExerciseViewer application.
+ * The implementation must be done by the application which uses ExerciseViewer. 
  * 
  * @author  Stefan Saring
  * @version 1.0
@@ -20,7 +20,7 @@ public interface PVOptions
 
     /** 
      * The returned flag is true, when the second diagram graph should 
-     * always be displayed in the PolarViewer diagram panel (data must be 
+     * always be displayed in the ExerciseViewer diagram panel (data must be 
      * available).
      * @return the flag for displaying the second diagram
      */
