@@ -73,7 +73,7 @@ public class DiagramPanel extends BasePanel {
     
     /**
      * Standard c'tor.
-     * @param context the PolarViewer context
+     * @param context the ExerciseViewer context
      */
     @Inject
     public DiagramPanel (PVContext context) {
