@@ -36,7 +36,7 @@ public class SamplePanel extends BasePanel {
     
     /**
      * Standard c'tor.
-     * @param context the PolarViewer context
+     * @param context the ExerciseViewer context
      */
     @Inject
     public SamplePanel (PVContext context) {
