@@ -45,6 +45,8 @@ v4.3.0:
   - PolarViewer has been renamed to ExerciseViewer, because it supports much more 
     heart rate monitor manufacturers than Polar (was the case at beginning)
     - changed package name de.saring.polarviewer to de.saring.exerciseviewer
+    - all PolarViewer resource keys and texts/translation has been renamed
+    - rename in all documentations (also in source code) 
     
 v4.2.1 (no public release, internal marker only):
  SportsTracker changes:
